Adding more detail on enumerators

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,11 +2,11 @@
 
 @main("My shop") {
 
-<div class="well">
+<div style="color:#0000FF">
    @cart
 </div>
 
-<div class="well">
+<div style="color:#006600">
     @waitlist
 </div>
 
